--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "daily-spend---website",
+  "homepage": "https://harshitpanwar1327.github.io/Daily-Spend-Website/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,10 +8,13 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "gh-pages": "^6.3.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
