--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@tailwindcss/vite": "^4.1.13",
     "gh-pages": "^6.3.0",
+    "lucide-react": "^0.542.0",
     "motion": "^12.12.1",
     "react": "^19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-iframe": "^1.8.5",
+    "react-intersection-observer": "^9.16.0",
+    "react-router-dom": "^7.8.2",
     "react-scroll": "^1.9.3",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^11.2.7"
+    "swiper": "^11.2.7",
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
